# ROKEY_D_1

./: (양식) A-1_협동1_홍길동.pptx  .gitignore  7DAY_MASTERPLAN.md  CrackDetection.msg  Experiment_GUIDE.md  HX711Serial.ino  README.md  REAL_ROBOT_OPERATION_GUIDE.md  SUGAR_WATER_EXPERIMENT_COMPLETE.md  check_poco_system.sh  complete_build.sh  crack_publisher.py  debug_poco.sh  doosan  finalize_bringup.sh  first_map.pgm  first_map.yaml  fix_missing_files.sh  fix_poco_install.sh  follow_waypoints.py  gitupdate.sh  hi  install_script.sh  new  package_debug.sh  project  publisher  restructure_chemistry.sh  result - 복사본 (2).html  ros2-mqtt.py  ros2_topic_list_mqtt.py  run-backend.sh  run_experiment.sh  run_new_emulator.sh  run_new_real_robot.sh  run_new_rviz.sh  run_sugar_water_experiment.sh  scale_bridge.md  scale_publisher.py  setup.sh  (+21 more)
DRL basic/: DRL 명령어 심화 학습.md  (+2 more)
backup_before_chemistry_20250731_093400/src/doosan_m0609_control/: package.xml
backup_before_chemistry_20250731_093400/src/doosan_m0609_control/src/: main_node.cpp
puddle_detection/: package.xml  setup.cfg
puddle_detection/puddle_detection/: agsenet_node.py
puddle_interfaces/: package.xml
puddle_interfaces/msg/: Puddle.msg  PuddleArray.msg
puddle_ws/src/puddle_interfaces/: CMakeLists.txt  package.xml
puddle_ws/src/puddle_interfaces/msg/: Puddle.msg
puddle_ws/src/puddle_tracking/: CMakeLists.txt
puddle_ws/src/puddle_tracking/config/: tracker_params.yaml
puddle_ws/src/puddle_tracking/launch/: tracking.launch.py
puddle_ws/src/puddle_tracking/puddle_tracking/: topology_utils.py
puddle_ws/src/puddle_viz/: CMakeLists.txt  package.xml  setup.cfg
puddle_ws/src/puddle_viz/config/: marker_params.yaml
puddle_ws/src/puddle_viz/launch/: viz.launch.py
puddle_ws/src/slam_integration/: package.xml
puddle_ws/src/slam_integration/config/: slam_params.yaml
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/scripts/: kill_all_nodes.sh
src/arduino_loadcell_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/arduino_loadcell_interface/arduino_loadcell_interface/: interface.py  parser.py
src/arduino_loadcell_interface/include/arduino_loadcell_interface/: loadcell_interface.hpp
src/arduino_loadcell_interface/msg/: LoadcellData.msg
src/arduino_loadcell_interface/src/: loadcell_node.cpp
src/chemistry_experiment_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/chemistry_experiment_manager/chemistry_experiment_manager/: experiment_logger.py  experiment_runner.py  main.py  result_analyzer.py
src/chemistry_experiment_manager/src/: chemistry_experiment_manager_node.cpp
src/chemistry_msgs/: CMakeLists.txt  package.xml
src/chemistry_msgs/msg/: ConcentrationData.msg  WeightMeasurement.msg
src/chemistry_msgs/srv/: CalculateConcentration.srv
src/doosan_m0609_bringup/: CMakeLists.txt  README.md  package.xml
src/doosan_m0609_bringup/config/: ros2_controllers.yaml
src/doosan_m0609_bringup/dsr_bringup2/: package.xml
src/doosan_m0609_bringup/dsr_bringup2/launch/: dsr_bringup2_mujoco.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
src/doosan_m0609_bringup/launch/: chemical_experiment_system.launch.py  dsr_bringup2_rviz.launch.py  m0609_bringup.launch.py  m0609_real.launch.py  m0609_virtual.launch.py
src/doosan_m0609_bringup/rviz/: m0609.rviz
src/doosan_m0609_control/: CMakeLists.txt  package.xml
src/doosan_m0609_control/include/doosan_m0609_control/: dart_interface.hpp
src/doosan_m0609_control/src/: dart_interface.cpp
src/doosan_m0609_controller/: CMakeLists.txt  CMakeLists.txt.backup  build_help.txt  doosan_m0609_controller_plugins.xml  package.xml
src/doosan_m0609_controller/dsr_controller2/: package.xml
src/doosan_m0609_controller/dsr_controller2_backup/launch/: dsr_moveit2.launch.py
src/doosan_m0609_controller/msg/: JointState.msg
src/doosan_m0609_controller/src/: doosan_controller_node.cpp  doosan_m0609_controller.cpp  doosan_robot_controller.cpp  drfl_dummy.cpp  dsr_controller2.cpp
src/doosan_m0609_controller/srv/: ConnectRobot.srv  MoveJ.srv
src/doosan_m0609_description/: CMakeLists.txt  doosan_m0609_description_path.dsv.in
src/doosan_m0609_description/urdf/: m0609.white.urdf  m0609_isaac_sim.urdf
src/doosan_m0609_hardware/: CMakeLists.txt  doosan_m0609_hardware.xml
src/doosan_m0609_hardware/config/: doosan_m0609_control.yaml
src/doosan_m0609_hardware/dsr_hardware2/: package.xml
src/doosan_m0609_hardware/launch/: doosan_m0609_bringup.launch.py
src/doosan_m0609_hardware/src/: dsr_hw_interface2.cpp
src/experiment_data_logger/: CMakeLists.txt  package.xml
src/experiment_data_logger/src/: experiment_data_logger_node.cpp
src/hybrid_weight_measurement/: CMakeLists.txt  package.xml
src/hybrid_weight_measurement/src/: weight_fusion_node.cpp
src/motion_controller/: package.xml  setup.py
src/motion_controller/launch/: motion_controller.launch.py
src/motion_controller/motion_controller/: goal_sender.py  velocity_controller.py
src/precision_liquid_pouring/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/precision_liquid_pouring/precision_liquid_pouring/: concentration_calculator.py  config.py  main.py  pouring_controller.py  scale_interface.py  utils.py
src/precision_liquid_pouring/src/: precision_liquid_pouring_node.cpp
src/safety_monitor/: package.xml  setup.py
src/safety_monitor/safety_monitor/: drive.py
src/safety_monitoring_system/: CMakeLists.txt  package.xml
src/safety_monitoring_system/src/: safety_monitoring_system_node.cpp
src/salt_concentration_calculator/: CMakeLists.txt  package.xml
src/salt_concentration_calculator/src/: salt_concentration_calculator_node.cpp
src/sugar_water_experiment/: CMakeLists.txt  README.md  package.xml
src/sugar_water_experiment/include/: sugar_water_experiment.hpp
src/sugar_water_experiment/launch/: sugar_water_experiment_real.launch.py
src/sugar_water_experiment/src/: doosan_robot_interface.cpp  pose_controller.cpp  safety_monitor.cpp  simple_sequence_controller.cpp  sugar_water_experiment_refactored.cpp  sugar_water_experimenter_node.cpp  weight_monitor.cpp
(+3198 files in other folders)
