<?xml version="1.0"?>
<package format="3">
  <name>puddle_detection</name>
  <version>0.0.1</version>
  <description>Puddle detection using AGSENet in ROS 2</description>

  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>common_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
