<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Unified system launcher for turtlebot4 safety monitoring</description>

  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_integration</exec_depend>
  <exec_depend>puddle_detection</exec_depend>
  <exec_depend>puddle_tracking</exec_depend>
  <exec_depend>puddle_viz</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
