<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doosan_m0609_bringup</name>
  <version>2.0.0</version>
  <description>Launch package for Doosan M0609 collaborative robot with ROS2 Control</description>
  <maintainer email="your.email@doosan.com">Doosan M0609 Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  
  <!-- ROS2 Control ecosystem -->
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  
  <!-- Doosan specific packages -->
  <depend>dsr_description2</depend>
  <depend>dsr_hardware2</depend>
  
  <!-- Robot state publishing -->
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  
  <!-- Launch system -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>