<?xml version="1.0"?>
<package format="3">
  <name>doosan_m0609_control</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for controlling Doosan M0609 robot using DRFL API.</description>

  <maintainer email="jaeho@example.com">Jaehong Oh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- For .srv later -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
