<?xml version="1.0"?>
<package format="3">
  <name>motion_controller</name>
  <version>0.0.1</version>
  <description>Direct and goal-based velocity control for TurtleBot4</description>
  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend> <!-- 쿼터니언 변환용 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
