<?xml version="1.0"?>
<package format="3">
  <name>safety_monitor</name>
  <version>0.0.1</version>
  <description>TurtleBot4 별 모양 경로 주행 노드</description>
  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
