<?xml version="1.0"?>
<package format="3">
  <n>salt_concentration_calculator</n>
  <version>1.0.0</version>
  <description>salt_concentration_calculator package for precision chemistry system</description>
  <maintainer email="jaeho@example.com">Jaehong Oh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>chemistry_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>chemistry_msgs</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
