<?xml version="1.0"?>
<package format="3">
  <name>doosan_m0609_control</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for controlling Doosan M0609 robot using DRFL API with official service interfaces</description>

  <maintainer email="jaeho@example.com">Jaehong Oh</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/your-repo/doosan_m0609_control</url>
  <url type="bugtracker">https://github.com/your-repo/doosan_m0609_control/issues</url>
  <url type="repository">https://github.com/your-repo/doosan_m0609_control</url>

  <author email="jaeho@example.com">Jaehong Oh</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Package type and interface generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>